--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ PRIVATE_KEY=
 PRIVATE_KEY_1=
 POLYGON_API_KEY=
 ARBITRUM_RPC_URL=
-ARBITRUM_KEY=
+ARBITRUM_API_KEY=
+MAINNET_RPC_URL=
+MAINNET_API_KEY=
