--- a/foundry.toml
+++ b/foundry.toml
@@ -7,5 +7,6 @@ optimizer_runs = 200
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 [rpc_endpoints]
+mainnet = "${MAINNET_RPC_URL}"
 polygon = "${POLYGON_RPC_URL}"
 arbitrum = "${ARBITRUM_RPC_URL}"
